--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "hono": "^3.12.1",
     "isbot": "^4.4.0",
     "marked": "^11.1.1",
+    "nanoid": "^5.0.4",
+    "nanoid-dictionary": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -38,6 +40,7 @@
     "@cloudflare/workers-types": "^4.20231218.0",
     "@remix-run/dev": "^2.4.1",
     "@remix-run/eslint-config": "^2.5.0",
+    "@types/nanoid-dictionary": "^4.2.3",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "concurrently": "^8.0.1",
