add: inversify, reflect-metadata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,15 @@
       "DOM.Iterable",
       "ESNext"
     ],
+    "types": ["reflect-metadata"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "target": "ESNext",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
