--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^7.0.3",
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.1",
+    "inversify": "^6.0.2",
     "isbot": "^4.4.0",
     "marked": "^11.1.1",
     "nanoid": "^5.0.4",
@@ -32,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "reflect-metadata": "^0.2.1",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
     "uuid": "^9.0.1"
