--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "deploy": "wrangler publish server.workers.ts",
     "dev:remix": "remix watch",
     "node": "nodemon --watch ./build/server.js ./build/server.js",
-    "node:build": "esbuild --format=esm --bundle --platform=node --watch --outfile=./build/server.js ./server.node.ts",
-    "workers": "wrangler dev server.workers.ts",
-    "bun": "bun run --hot server.bun.ts",
+    "node:build": "esbuild --format=esm --bundle --platform=node --watch --outfile=./build/server.js ./src/server.node.ts",
+    "workers": "wrangler dev ./src/server.workers.ts",
+    "bun": "bun run --hot ./src/server.bun.ts",
     "dev:node": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:node:build\" \"npm:node\"",
     "dev:bun": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:bun\"",
     "dev:workers": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:workers\"",
