--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "private": true,
-  "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "deploy": "wrangler publish server.workers.ts",
+    "build": "NODE_ENV=development remix build && npx tsc -p tsconfig.build.json",
+    "dev:server": "nodemon ./build/server/index.js --watch",
     "dev:remix": "remix watch",
-    "node": "nodemon --watch ./build/server.js ./build/server.js",
-    "node:build": "esbuild --format=esm --bundle --platform=node --watch --outfile=./build/server.js ./src/server.node.ts",
-    "workers": "wrangler dev ./src/server.workers.ts",
-    "bun": "bun run --hot ./src/server.bun.ts",
-    "dev:node": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:node:build\" \"npm:node\"",
-    "dev:bun": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:bun\"",
-    "dev:workers": "concurrently \"npm:build\" \"npm:dev:remix\" \"npm:workers\"",
-    "typecheck": "tsc"
+    "dev": "NODE_ENV=development PORT=3000 REMIX_DEV_ORIGIN=http://localhost:3000 concurrently \"npm:dev:remix\" \"npm:dev:server\""
   },
+  "type": "module",
   "dependencies": {
     "@hono/node-server": "^1.4.0",
     "@progfay/scrapbox-parser": "^8.1.0",
-    "@remix-run/cloudflare": "^2.4.1",
-    "@remix-run/cloudflare-workers": "^2.5.0",
     "@remix-run/css-bundle": "^2.5.0",
+    "@remix-run/node": "^2.5.1",
     "@remix-run/react": "^2.4.1",
+    "@remix-run/serve": "^2.5.1",
+    "@remix-run/server-runtime": "^2.5.1",
+    "@types/koa": "^2.14.0",
     "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.3.1",
+    "drizzle-kit": "^0.20.13",
     "drizzle-orm": "^0.29.3",
-    "hono": "^3.12.1",
+    "esbuild": "^0.19.12",
     "inversify": "^6.0.2",
     "isbot": "^4.4.0",
+    "koa": "^2.15.0",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
     "marked": "^11.1.1",
+    "mysql2": "^3.9.0",
     "nanoid": "^5.0.4",
     "nanoid-dictionary": "^4.3.0",
     "react": "^18.2.0",
@@ -36,25 +36,27 @@
     "reflect-metadata": "^0.2.1",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^5.0.12",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231218.0",
-    "@remix-run/dev": "^2.4.1",
+    "@remix-run/dev": "^2.5.1",
     "@remix-run/eslint-config": "^2.5.0",
+    "@types/koa-router": "^7.4.8",
+    "@types/koa-static": "^4.0.4",
     "@types/nanoid-dictionary": "^4.2.3",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "concurrently": "^8.0.1",
     "eslint": "^8.38.0",
-    "miniflare": "^3.20231218.1",
     "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.4",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "wrangler": "^3.22.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
