NTPをakariに置き換える

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dns"]
 	path = dns
 	url = https://github.com/iamtakagi/nadeco
+[submodule "ntp"]
+	path = ntp
+	url = https://github.com/iamtakagi/akari
